--- a/Data Handling.ipynb
+++ b/Data Handling.ipynb
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "a56f3788",
+   "id": "0f0b4b3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "cff88928",
+   "id": "ffec2127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 58,
    "id": "4db9182b",
    "metadata": {},
    "outputs": [],
@@ -576,15 +576,15 @@
     "    dfm = dfm.drop_duplicates(keep='first').copy() \n",
     "    \n",
     "    #removing links,emoji's, punc and tokenzing the words and making 3 dfs in 3 methods\n",
-    "    for i in range(0, 20):#len(df.index)):\n",
+    "    for i in range(0, len(df.index)):\n",
     "        temp = df['text'][i]\n",
     "        temp = remove_emoji(temp)\n",
     "        temp = cleanLinks(temp)\n",
     "        temp = cleanPunctuation(temp)\n",
     "        temp = tokenizeTweets(temp)\n",
-    "        df_stem['text'][i] = stemming(temp)\n",
+    "#         df_stem['text'][i] = stemming(temp)\n",
     "        df_lemmatize['text'][i] = lemmataizeSentance(temp)\n",
-    "        df_chunk['text'][i] = chunking(temp)\n",
+    "#         df_chunk['text'][i] = chunking(temp)\n",
     "       \n",
     "        df_stem = replace_empty_to_nan(temp ,df_stem, i)\n",
     "        df_lemmatize = replace_empty_to_nan(temp ,df_lemmatize, i)\n",
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "id": "1c96c49e",
    "metadata": {},
    "outputs": [
@@ -615,61 +615,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ronhu\\AppData\\Local\\Temp\\ipykernel_38716\\3824380362.py:14: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_stem['text'][i] = stemming(temp)\n",
-      "C:\\Users\\ronhu\\AppData\\Local\\Temp\\ipykernel_38716\\3824380362.py:15: SettingWithCopyWarning: \n",
+      "C:\\Users\\ronhu\\AppData\\Local\\Temp\\ipykernel_38716\\1574487453.py:15: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_lemmatize['text'][i] = lemmataizeSentance(temp)\n",
-      "C:\\Users\\ronhu\\AppData\\Local\\Temp\\ipykernel_38716\\3824380362.py:16: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_chunk['text'][i] = chunking(temp)\n",
-      "C:\\Users\\ronhu\\AppData\\Local\\Temp\\ipykernel_38716\\2406227413.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dfm['text'][index] = float('NaN')\n",
-      "C:\\Users\\ronhu\\AppData\\Local\\Temp\\ipykernel_38716\\3824380362.py:14: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_stem['text'][i] = stemming(temp)\n",
-      "C:\\Users\\ronhu\\AppData\\Local\\Temp\\ipykernel_38716\\3824380362.py:15: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_lemmatize['text'][i] = lemmataizeSentance(temp)\n",
-      "C:\\Users\\ronhu\\AppData\\Local\\Temp\\ipykernel_38716\\3824380362.py:16: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_chunk['text'][i] = chunking(temp)\n",
-      "C:\\Users\\ronhu\\AppData\\Local\\Temp\\ipykernel_38716\\2406227413.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dfm['text'][index] = float('NaN')\n",
-      "C:\\Users\\ronhu\\AppData\\Local\\Temp\\ipykernel_38716\\3824380362.py:14: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_stem['text'][i] = stemming(temp)\n",
-      "C:\\Users\\ronhu\\AppData\\Local\\Temp\\ipykernel_38716\\3824380362.py:15: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_lemmatize['text'][i] = lemmataizeSentance(temp)\n",
-      "C:\\Users\\ronhu\\AppData\\Local\\Temp\\ipykernel_38716\\3824380362.py:16: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_chunk['text'][i] = chunking(temp)\n",
       "C:\\Users\\ronhu\\AppData\\Local\\Temp\\ipykernel_38716\\2406227413.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
@@ -681,9 +631,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "df2 282830\n",
-      "df2 282830\n",
-      "df2 282830\n"
+      "df2 276325\n"
      ]
     }
    ],
