add doc2vec train

--- a/Data Handling.ipynb
+++ b/Data Handling.ipynb
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "0f0b4b3f",
+   "id": "aa979d54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +520,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ffec2127",
+   "id": "b8a81892",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,92 +648,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "5467335f",
+   "execution_count": null,
+   "id": "fb8df08e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#def tagged_document(list_of_tweets):\n",
-    " #   for i, list_of_tweets in enumerate(list_of_tweets):\n",
-    "  #      yield gensim.models.doc2vec.TaggedDocument(list_of_tweets, [i])\n",
-    "#tagged_document(df_clean['text'])\n",
-    "#data_for_training = tagged_document(df_clean['text'])\n",
-    "#model = gensim.models.doc2vec.Doc2Vec(vector_size=40, minn_count=2, epochs=30)\n",
-    "#model.build_vocab(data_for_training)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "id": "66791425",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(19084423, 21649440)"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model = gensim.models.Word2Vec(window=10,min_count=2,workers=4, epochs=30)\n",
-    "model.build_vocab(df_clean['text'], progress_per=1000)\n",
-    "model.train(df_clean['text'], total_examples=model.corpus_count, epochs=model.epochs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "id": "dd892e9e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('terribl', 0.5563927292823792),\n",
-       " ('dumb', 0.5460772514343262),\n",
-       " ('poor', 0.5032684206962585),\n",
-       " ('unfair', 0.5010190606117249),\n",
-       " ('stupid', 0.5001596808433533),\n",
-       " ('ridicul', 0.48203980922698975),\n",
-       " ('good', 0.47048696875572205),\n",
-       " ('horribl', 0.4655146896839142),\n",
-       " ('sad', 0.46312353014945984),\n",
-       " ('like', 0.4363589882850647)]"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.wv.most_similar(\"bad\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "id": "b3942340",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.47048694"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.wv.similarity(w1=\"good\", w2=\"bad\")"
+    "#define the doc 2 vec and trian it\n",
+    "\n",
+    "LabeledSentence1 = gensim.models.doc2vec.TaggedDocument\n",
+    "all_content_train = []\n",
+    "j=0\n",
+    "for em in df_clean['text'].values:\n",
+    "    all_content_train.append(LabeledSentence1(em,[j]))\n",
+    "    j+=1\n",
+    "print('Number of texts processed:' , j)\n",
+    "\n",
+    "d2v_model = Doc2Vec(all_content_train, window = 10, min_count = 500, workers=7, dm = 1,alpha=0.025, min_alpha=0.001)\n",
+    "d2v_model.train(all_content_train, total_examples=d2v_model.corpus_count, epochs=10, start_alpha=0.002, end_alpha=-0.016)"
    ]
   },
   {
@@ -742,7 +673,9 @@
    "id": "b8e56e78",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#TRY 1 CONFIG (****)"
+   ]
   },
   {
    "cell_type": "code",
@@ -750,7 +683,9 @@
    "id": "fa34e989",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#TRY 2 CONFIG (****)"
+   ]
   },
   {
    "cell_type": "code",
@@ -758,7 +693,9 @@
    "id": "23c400ec",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#TRY 3 CONFIG (****)"
+   ]
   },
   {
    "cell_type": "code",
@@ -766,12 +703,22 @@
    "id": "cce59724",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# GO WITH 3"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "c36044e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7afccaa",
    "metadata": {},
    "outputs": [],
    "source": []
