--- a/Data Handling.ipynb
+++ b/Data Handling.ipynb
@@ -439,6 +439,7 @@
    "source": [
     "def cleanPunctuation(sentance):\n",
     "    new_sentance = sentance.translate(str.maketrans('', '', string.punctuation))\n",
+    "    new_sentance = new_sentance.replace(\"“\",\"\").replace(\"’\",\"\").replace(\"”\",\"\")\n",
     "    return new_sentance"
    ]
   },
@@ -564,13 +565,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "id": "4db9182b",
    "metadata": {},
    "outputs": [],
    "source": [
     "def remove_unnecessary_data(dataframe):\n",
-    "    dfm = df_lemmatize = df_stem = df_chunk = dataframe.copy()\n",
+    "    dfm = df_lemmatize = df_stem = dataframe.copy()\n",
     "    \n",
     "    #remove duplicate rows\n",
     "    dfm = dfm.drop_duplicates(keep='first').copy() \n",
@@ -578,24 +579,22 @@
     "    #removing links,emoji's, punc and tokenzing the words and making 3 dfs in 3 methods\n",
     "    for i in range(0, len(df.index)):\n",
     "        temp = df['text'][i]\n",
+    "        temp = map(lambda x: x.lower(),temp)\n",
     "        temp = remove_emoji(temp)\n",
     "        temp = cleanLinks(temp)\n",
     "        temp = cleanPunctuation(temp)\n",
     "        temp = tokenizeTweets(temp)\n",
-    "#         df_stem['text'][i] = stemming(temp)\n",
+    "        df_stem['text'][i] = stemming(temp)\n",
     "        df_lemmatize['text'][i] = lemmataizeSentance(temp)\n",
-    "#         df_chunk['text'][i] = chunking(temp)\n",
     "       \n",
     "        df_stem = replace_empty_to_nan(temp ,df_stem, i)\n",
     "        df_lemmatize = replace_empty_to_nan(temp ,df_lemmatize, i)\n",
-    "        df_chunk = replace_empty_to_nan(temp ,df_chunk, i)\n",
     "    \n",
-    "#     df_stem =  remove_nan_rows(df_stem)    \n",
+    "    df_stem =  remove_nan_rows(df_stem)    \n",
     "    df_lemmatize =  remove_nan_rows(df_lemmatize)    \n",
-    "#     df_chunk =  remove_nan_rows(df_chunk)    \n",
     "    \n",
     "             \n",
-    "    return df_stem , df_lemmatize, df_chunk"
+    "    return df_stem , df_lemmatize"
    ]
   },
   {
@@ -638,33 +637,10 @@
    "source": [
     "\n",
     "print(\"df\" , df.size)\n",
-    "# df_stem = remove_unnecessary_data(df)[0]\n",
+    "df_stem = remove_unnecessary_data(df)[0]\n",
     "df_lemmatize = remove_unnecessary_data(df)[1]\n",
-    "# df_chunk = remove_unnecessary_data(df)[2]\n",
-    "# print(\"df2\" ,df_stem.size)\n",
-    "print(\"df2\" ,df_lemmatize.size)\n",
-    "# print(\"df2\" ,df_chunk.size)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb8df08e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#define the doc 2 vec and trian it\n",
-    "\n",
-    "LabeledSentence1 = gensim.models.doc2vec.TaggedDocument\n",
-    "all_content_train = []\n",
-    "j=0\n",
-    "for em in df_lemmatize['text'].values:\n",
-    "    all_content_train.append(LabeledSentence1(em,[j]))\n",
-    "    j+=1\n",
-    "print('Number of texts processed:' , j)\n",
-    "\n",
-    "d2v_model = Doc2Vec(all_content_train, window = 10, min_count = 500, workers=7, dm = 1,alpha=0.025, min_alpha=0.001)\n",
-    "d2v_model.train(all_content_train, total_examples=d2v_model.corpus_count, epochs=10, start_alpha=0.002, end_alpha=-0.016)"
+    "print(\"df2\" ,df_stem.size)\n",
+    "print(\"df2\" ,df_lemmatize.size)\n"
    ]
   }
  ],
