--- a/Crawler-With-Selenium.ipynb
+++ b/Crawler-With-Selenium.ipynb
@@ -78,10 +78,10 @@
     "# using selenium to scroll infinite page\n",
     "   \n",
     "**function phases**\n",
-    "* open website with web driver\n",
-    "* get the page hight for calculations\n",
-    "* in the loop, continue to scroll untill the cwe calculate that we get all the infinite page\n",
-    "* every 3 secondes we scroll, its 3 secs for the site will get tht data from its server"
+    "* Open website with web driver\n",
+    "* Get the page height for calculations\n",
+    "* Continue to scroll until we calculate that we get all the infinite page\n",
+    "* Every 3 seconds we scroll, its 3 secs for the site will get that data from its server
    ]
   },
   {
