--- a/Crawler-With-Selenium.ipynb
+++ b/Crawler-With-Selenium.ipynb
@@ -81,7 +81,7 @@
     "* open website with web driver\n",
     "* get the page hight for calculations\n",
     "* in the loop, continue to scroll untill the cwe calculate that we get all the infinite page\n",
-    "* every 3 secondes we scroll, its 3 secs for the site will get tht data from its server"
+    "* every 3 secondes we scroll, its 3 secs for the site will get tht data from its server\n"
    ]
   },
   {
