add comments the Data haneling

--- a/Data Handling.ipynb
+++ b/Data Handling.ipynb
@@ -431,13 +431,14 @@
    "id": "1096a7fa",
    "metadata": {},
    "source": [
-    "# Actions:\n",
-    "## Tokenizing each tweet\n",
-    "## Cleaning Punctuations\n",
-    "## Cleaning Links\n",
-    "## Cleaning Emojis\n",
-    "## Stemming\n",
-    "## Lemmataizing"
+    "# Functions:\n",
+    "* **function tokenizeTweets** - returns list of words that tokenized without stopwords , stopwords is common words in english that do not gives any information about the twite).\n",
+    "* **function cleanPunctuation** - cleaning punctuations from a twitte.\n",
+    "* **function cleanLinks** - cleaning any links for twitt.\n",
+    "* **function remove_emoji** - remove any emojis.\n",
+    "* **function stemming** - create stemming word list from word list that will insert to the function.\n",
+    "* **lemmataizeSentance** - create Lemmataizing word list from word list that will insert to the function.\n",
+    "* **replace_empty_to_nan** And **remove_nan_rows** - cleans any empty rows that in the dat frame."
    ]
   },
   {
@@ -574,6 +575,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c06df5b0",
+   "metadata": {},
+   "source": [
+    "* **function remove_unnecessary_data** - the main function in the phase, it calls all the phases to the twittes in the datafarame by this stages : \n",
+    "1) case lower all twitts\n",
+    "2) remove all emojis\n",
+    "3) clean the links\n",
+    "4) clean punctuation\n",
+    "5) tokenize twitts\n",
+    "\n",
+    "create two dataframs for comparations df_stem - call stemming() , df_lemmatize - "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "4db9182b",
@@ -677,7 +693,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
