--- a/Analyzing-Data.ipynb
+++ b/Analyzing-Data.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "5bcacc88",
-   "metadata": {},
-   "source": [
-    "# Imports"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "93144b59",
@@ -61,14 +53,6 @@
     "import bz2\n",
     "import pyLDAvis\n",
     "import pyLDAvis.gensim_models"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9f1e08ff",
-   "metadata": {},
-   "source": [
-    "# Phase 3 - The Data Handling"
    ]
   },
   {
@@ -223,7 +207,8 @@
    "id": "42ab0f11",
    "metadata": {},
    "source": [
-    "# Creating a vector with Doc2Vec and TFIDF & clustering with K-means algoritem\n"
+    "## Vectorize with Doc2Vec\n",
+    "## Clustering with K-means algoritem\n"
    ]
   },
   {
@@ -297,14 +282,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "41aead4e",
-   "metadata": {},
-   "source": [
-    "# Creating color arrays in order to represent the clusters"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 32,
    "id": "8622b942",
@@ -324,26 +301,18 @@
    "id": "fef6e9e5",
    "metadata": {},
    "source": [
-    "# Trying Both Stemming & Lemmatizing With Doc2Vec Clusters"
+    "### Using Doc2Vec with Stemming"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "153e1c81",
+   "id": "5b92cdbb",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_lemmatize_Doc2Vec = pd.read_csv(\"df_lemmatize_token.csv\")\n",
     "df_stem_Doc2Vec = pd.read_csv(\"df_stem_token.csv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7876dd33",
-   "metadata": {},
-   "source": [
-    "# With Stemming"
    ]
   },
   {
@@ -380,10 +349,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b575c47b",
+   "id": "fb8eb9f7",
    "metadata": {},
    "source": [
-    "# With Lemmatizing"
+    "### on df_lemmatize"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "689c9945",
+   "metadata": {},
+   "source": [
+    "## Using Doc2Vec with Lemmatizing"
    ]
   },
   {
@@ -420,27 +397,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26014e4b",
+   "id": "6263e273",
    "metadata": {},
    "source": [
-    "# Creating TFIDF Clusters:\n",
-    "## Printing The Dominating Words In Each Cluster\n",
-    "## Summing Up Each Clusters Likes & ReTweets \n",
-    "## Printing The Clusters As a Graph"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "38449b75",
-   "metadata": {},
-   "source": [
-    "## With Stemming:"
+    "## Using TFIDF with Stemming"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "b18b96bc",
+   "id": "f451df8b",
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0033cf37",
+   "id": "3dd12e93",
    "metadata": {},
    "source": [
     "## Printing The Word Clusters  & The Amount Of Likes and Retweets"
@@ -476,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "4801d0ce",
+   "id": "d8b5bb5d",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +576,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "132f010a",
+   "id": "24072d0c",
    "metadata": {},
    "source": [
     "## Printing The Clusters Scatter Plot - X = Retweets, Y = Likes"
@@ -619,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "a8f4347e",
+   "id": "1e4571ec",
    "metadata": {},
    "outputs": [
     {
@@ -662,16 +628,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e50c849c",
+   "id": "170dffd2",
    "metadata": {},
    "source": [
-    "## With Lemmatizing:"
+    "## Using TFIDF with Lemmetizing"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "91f506d5",
+   "id": "2a068235",
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36b87e21",
+   "id": "29d0126c",
    "metadata": {},
    "source": [
     "## Printing The Word Clusters"
@@ -707,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "d262d742",
+   "id": "bb4329c9",
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a172d215",
+   "id": "bf7e6d38",
    "metadata": {},
    "source": [
     "## Printing The Clusters Scatter Plot - X = Retweets, Y = Likes"
@@ -851,7 +817,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "b22207dc",
+   "id": "2fbc77bb",
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +863,10 @@
    "id": "dec9b749",
    "metadata": {},
    "source": [
-    "## Using LDA Algorithem With Both Stemming & Lemmatizing To Compare The LDA Module & The TFIDF Module Word Clusters "
+    "## LDA algoritem\n",
+    "\n",
+    "## Vectorize with doc2bow\n",
+    "## Clustering with LDA algoritem\n"
    ]
   },
   {
@@ -905,7 +874,8 @@
    "id": "ba6143ee",
    "metadata": {},
    "source": [
-    "## With Lemmatizing:"
+    "### on df_lemmatize\n",
+    "need to explane the code?"
    ]
   },
   {
@@ -926,9 +896,7 @@
    "id": "dbb9e21d",
    "metadata": {},
    "source": [
-    "### The Slide Bar:\n",
-    "1 = The frequensey that the word accured in the cluster\n",
-    "      ,0 = The frequensey that the word accured in corpus divided by all the words in the corpus\n"
+    "### need to explane what is the slide adjust \n"
    ]
   },
   {
@@ -1003,14 +971,6 @@
     "#Printing the clusters with lda_vis\n",
     "let_lda_vis = pyLDAvis.gensim_models.prepare(lem_lda, lem_corpus, lem_dictionary)\n",
     "pyLDAvis.display(let_lda_vis)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a62cb159",
-   "metadata": {},
-   "source": [
-    "## With Stemming:"
    ]
   },
   {
@@ -1091,11 +1051,59 @@
     "st_lda_vis = pyLDAvis.gensim_models.prepare(st_lda, st_corpus, st_dictionary)\n",
     "pyLDAvis.display(st_lda_vis)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02e456aa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81d207b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ee61018",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d15b242",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3930341d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a29744e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
