--- a/Analyzing-Data.ipynb
+++ b/Analyzing-Data.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e2ed66cb",
+   "metadata": {},
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "93144b59",
    "metadata": {},
    "outputs": [],
@@ -56,8 +64,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f6d79ffa",
+   "metadata": {},
+   "source": [
+    "# Phase 3 - The Data Handling"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "e7afccaa",
    "metadata": {},
    "outputs": [
@@ -65,17 +81,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Matan\\AppData\\Local\\Temp/ipykernel_19848/1553001018.py:95: SettingWithCopyWarning: \n",
+      "C:\\Users\\ronhu\\AppData\\Local\\Temp\\ipykernel_21500\\742834939.py:95: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_stem['text'][i] = stemming(temp)\n",
-      "C:\\Users\\Matan\\AppData\\Local\\Temp/ipykernel_19848/1553001018.py:96: SettingWithCopyWarning: \n",
+      "C:\\Users\\ronhu\\AppData\\Local\\Temp\\ipykernel_21500\\742834939.py:96: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_lemmatize['text'][i] = lemmataizeSentance(temp)\n",
-      "C:\\Users\\Matan\\AppData\\Local\\Temp/ipykernel_19848/1553001018.py:48: SettingWithCopyWarning: \n",
+      "C:\\Users\\ronhu\\AppData\\Local\\Temp\\ipykernel_21500\\742834939.py:48: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -207,8 +223,7 @@
    "id": "42ab0f11",
    "metadata": {},
    "source": [
-    "## Vectorize with Doc2Vec\n",
-    "## Clustering with K-means algoritem\n"
+    "# Creating a vector with Doc2Vec and TFIDF & clustering with K-means algoritem\n"
    ]
   },
   {
@@ -278,7 +293,15 @@
     "    plt.scatter(centroidpoint[:, 0], centroidpoint[:, 1], marker='^', s=150, c='#000000')\n",
     "    plt.show()\n",
     "    \n",
-    "    return X, model"
+    "    return X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5d0853c",
+   "metadata": {},
+   "source": [
+    "# Creating color arrays in order to represent the clusters"
    ]
   },
   {
@@ -301,18 +324,26 @@
    "id": "fef6e9e5",
    "metadata": {},
    "source": [
-    "### Using Doc2Vec with Stemming"
+    "# Trying Both Stemming & Lemmatizing With Doc2Vec Clusters"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "5b92cdbb",
+   "id": "50848a89",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_lemmatize_Doc2Vec = pd.read_csv(\"df_lemmatize_token.csv\")\n",
     "df_stem_Doc2Vec = pd.read_csv(\"df_stem_token.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4527be6",
+   "metadata": {},
+   "source": [
+    "# With Stemming"
    ]
   },
   {
@@ -349,18 +380,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb8eb9f7",
+   "id": "d747e53e",
    "metadata": {},
    "source": [
-    "### on df_lemmatize"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "689c9945",
-   "metadata": {},
-   "source": [
-    "## Using Doc2Vec with Lemmatizing"
+    "# With Lemmatizing"
    ]
   },
   {
@@ -397,16 +420,27 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6263e273",
+   "id": "6ca83ba8",
    "metadata": {},
    "source": [
-    "## Using TFIDF with Stemming"
+    "# Creating TFIDF Clusters:\n",
+    "## Printing The Dominating Words In Each Cluster\n",
+    "## Summing Up Each Clusters Likes & ReTweets \n",
+    "## Printing The Clusters As a Graph"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01f0d1e6",
+   "metadata": {},
+   "source": [
+    "## With Stemming:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "f451df8b",
+   "id": "3d5f7e45",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dd12e93",
+   "id": "1de6bffe",
    "metadata": {},
    "source": [
     "## Printing The Word Clusters  & The Amount Of Likes and Retweets"
@@ -442,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "d8b5bb5d",
+   "id": "08fd1e13",
    "metadata": {},
    "outputs": [
     {
@@ -576,16 +610,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24072d0c",
+   "id": "21520661",
    "metadata": {},
    "source": [
-    "## Printing The Clusters Scatter Plot - X = Retweets, Y = Likes"
+    "## Stemming Printing The Clusters Scatter Plot - X = Retweets, Y = Likes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "1e4571ec",
+   "id": "78ddb41a",
    "metadata": {},
    "outputs": [
     {
@@ -628,16 +662,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "170dffd2",
+   "id": "190e27a6",
    "metadata": {},
    "source": [
-    "## Using TFIDF with Lemmetizing"
+    "## With Lemmatizing:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "2a068235",
+   "id": "d3618dee",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +698,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29d0126c",
+   "id": "97f4bf3b",
    "metadata": {},
    "source": [
     "## Printing The Word Clusters"
@@ -673,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "bb4329c9",
+   "id": "ad9c67c2",
    "metadata": {},
    "outputs": [
     {
@@ -808,16 +842,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf7e6d38",
+   "id": "57d496e5",
    "metadata": {},
    "source": [
-    "## Printing The Clusters Scatter Plot - X = Retweets, Y = Likes"
+    "## Lemmatizing - Printing The Clusters Scatter Plot - X = Retweets, Y = Likes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "2fbc77bb",
+   "id": "e0883876",
    "metadata": {},
    "outputs": [
     {
@@ -863,10 +897,7 @@
    "id": "dec9b749",
    "metadata": {},
    "source": [
-    "## LDA algoritem\n",
-    "\n",
-    "## Vectorize with doc2bow\n",
-    "## Clustering with LDA algoritem\n"
+    "## Using LDA Algorithem With Both Stemming & Lemmatizing To Compare The LDA Module & The TFIDF Module Word Clusters "
    ]
   },
   {
@@ -874,8 +905,7 @@
    "id": "ba6143ee",
    "metadata": {},
    "source": [
-    "### on df_lemmatize\n",
-    "need to explane the code?"
+    "## With Lemmatizing:"
    ]
   },
   {
@@ -896,7 +926,9 @@
    "id": "dbb9e21d",
    "metadata": {},
    "source": [
-    "### need to explane what is the slide adjust \n"
+    "### The Slide Bar:\n",
+    "1 = The frequensey that the word accured in the cluster\n",
+    "      ,0 = The frequensey that the word accured in corpus divided by all the words in the corpus\n"
    ]
   },
   {
@@ -971,6 +1003,14 @@
     "#Printing the clusters with lda_vis\n",
     "let_lda_vis = pyLDAvis.gensim_models.prepare(lem_lda, lem_corpus, lem_dictionary)\n",
     "pyLDAvis.display(let_lda_vis)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d31a183",
+   "metadata": {},
+   "source": [
+    "## With Stemming:"
    ]
   },
   {
@@ -1051,54 +1091,6 @@
     "st_lda_vis = pyLDAvis.gensim_models.prepare(st_lda, st_corpus, st_dictionary)\n",
     "pyLDAvis.display(st_lda_vis)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02e456aa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "81d207b6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ee61018",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d15b242",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3930341d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a29744e1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
